[package]
name = "ci_cd_optimizer"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full", "rt-multi-thread", "macros"] }
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
reqwest = { version = "0.11", features = ["json"] }
octocrab = "0.28"
gitlab = "0.1300"
lettre = { version = "0.11", features = ["tokio1-native-tls"] }
slack-morphism = "2.14.0"
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "1.0"
anyhow = "1.0"
clap = { version = "4", features = ["derive"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
dotenvy = "0.15"
subtle = "2.5"
hyper = "1.0"
tower = "0.4"
tower-http = { version = "0.4", features = ["trace"] }
http-body-util = "0.1.3"
bytes = "1.0"
regex = "1.11.1"